--- a/sentence.css
+++ b/sentence.css
@@ -7,8 +7,8 @@ body {
     padding: 0;
     background: #f9f9f9;
 }
-
 h1 {
+
     text-align: center;
     background: #333;
     color: white;
@@ -466,4 +466,20 @@ h1 {
     font-size: 18px;
     padding: 5px;
     width: 250px;
+}
+
+#autoPlayBtn {
+    margin-left: 10px;
+    padding: 5px 10px;
+    font-size: 16px;
+    background-color: #647f91;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#autoPlayBtn:hover {
+    background-color: #4a6375;
 }
