--- a/index.css
+++ b/index.css
@@ -461,6 +461,21 @@ h1 {
     transition: background-color 0.3s ease;
 }
 
-#autoPlayBtn:hover {
+#autoPlayBtnDetails {
+    margin-left: 10px;
+    padding: 5px 10px;
+    font-size: 16px;
+    background-color: #647f91;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#autoPlayBtnDetails:hover {
     background-color: #4a6375;
+}
+
+#autoPlayBtn.active {
+    background-color: #00BFFF !important;
 }
