--- a/sentence.css
+++ b/sentence.css
@@ -483,3 +483,23 @@ h1 {
 #autoPlayBtn:hover {
     background-color: #4a6375;
 }
+
+#autoPlayBtnDetails {
+    margin-left: 10px;
+    padding: 5px 10px;
+    font-size: 16px;
+    background-color: #647f91;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#autoPlayBtnDetails:hover {
+    background-color: #4a6375;
+}
+
+#autoPlayBtn.active {
+    background-color: #00BFFF !important;
+}
+
