--- a/sentence.css
+++ b/sentence.css
@@ -488,11 +488,12 @@ h1 {
     margin-left: 10px;
     padding: 5px 10px;
     font-size: 16px;
-    background-color: #647f91;
+    background-color: #647f91; /* 原始顏色 */
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 #autoPlayBtnDetails:hover {
