--- a/index.css
+++ b/index.css
@@ -478,3 +478,8 @@ h1 {
 #autoPlayBtn.active {
     background-color: #00BFFF !important;
 }
+
+.word-item-container.playing {
+    background-color: #00BFFF; /* 亮藍色 */
+    color: white; /* 確保文字可見 */
+}
